Examples/test-suite/errors/doxygen_unknown_command.i
%module xxx

/**
    There is an \unknown Doxygen comment here.
 */
void foo();
